{
  "version": 4,
  "terraform_version": "1.0.3",
  "serial": 122,
  "lineage": "cebae289-73f9-cfa3-42a9-d1220ad49f06",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "terraform_course",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.2.50",
            "association_id": "eipassoc-014b74120d503a9bf",
            "domain": "vpc",
            "id": "eipalloc-093a82195d26cee89",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b71f61aea9247e6d",
            "private_dns": "ip-10-0-2-50.ec2.internal",
            "private_ip": "10.0.2.50",
            "public_dns": "ec2-34-206-238-76.compute-1.amazonaws.com",
            "public_ip": "34.206.238.76",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.terraform_course",
            "aws_network_interface.terraform_course",
            "aws_security_group.terraform_course",
            "aws_subnet.terraform_course",
            "aws_vpc.terraform_course"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform_course",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c2b8ca1dad447f8a",
            "arn": "arn:aws:ec2:us-east-1:904821688138:instance/i-0d21c108e7e3fabfa",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d21c108e7e3fabfa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-course",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0b71f61aea9247e6d"
              }
            ],
            "primary_network_interface_id": "eni-0b71f61aea9247e6d",
            "private_dns": "ip-10-0-2-50.ec2.internal",
            "private_ip": "10.0.2.50",
            "public_ip": "34.206.238.76",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f54e67595d594936",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d7eb04865afd89be",
            "tags": {
              "Name": "web-server"
            },
            "tags_all": {
              "Name": "web-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07841bdc34d2bbdd2"
            ]
          },
          "dependencies": [
            "aws_network_interface.terraform_course",
            "aws_security_group.terraform_course",
            "aws_subnet.terraform_course",
            "aws_vpc.terraform_course"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform_course",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904821688138:internet-gateway/igw-076fee35d0f9e5278",
            "id": "igw-076fee35d0f9e5278",
            "owner_id": "904821688138",
            "tags": {
              "Name": "terraform_course"
            },
            "tags_all": {
              "Name": "terraform_course"
            },
            "vpc_id": "vpc-08795b010f070717f"
          },
          "dependencies": [
            "aws_vpc.terraform_course"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "terraform_course",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0b71f61aea9247e6d",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "12:e1:0c:82:a3:33",
            "private_ip": "10.0.2.50",
            "private_ips": [
              "10.0.2.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-07841bdc34d2bbdd2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d7eb04865afd89be"
          },
          "dependencies": [
            "aws_security_group.terraform_course",
            "aws_subnet.terraform_course",
            "aws_vpc.terraform_course"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_course",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904821688138:route-table/rtb-037db8f7c825c2e85",
            "id": "rtb-037db8f7c825c2e85",
            "owner_id": "904821688138",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-076fee35d0f9e5278",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-076fee35d0f9e5278",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "example"
            },
            "tags_all": {
              "Name": "example"
            },
            "vpc_id": "vpc-08795b010f070717f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform_course",
            "aws_vpc.terraform_course"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform_course",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063d60cd383d887db",
            "route_table_id": "rtb-037db8f7c825c2e85",
            "subnet_id": "subnet-0d7eb04865afd89be"
          },
          "dependencies": [
            "aws_internet_gateway.terraform_course",
            "aws_route_table.terraform_course",
            "aws_subnet.terraform_course",
            "aws_vpc.terraform_course"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform_course",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904821688138:security-group/sg-07841bdc34d2bbdd2",
            "description": "Allow port 80, 443, and 22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07841bdc34d2bbdd2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSL",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform_course",
            "name_prefix": "",
            "owner_id": "904821688138",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_all_protocols_outbound"
            },
            "tags_all": {
              "Name": "allow_all_protocols_outbound"
            },
            "timeouts": null,
            "vpc_id": "vpc-08795b010f070717f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform_course"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform_course",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904821688138:subnet/subnet-0d7eb04865afd89be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0d7eb04865afd89be",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "904821688138",
            "tags": {
              "Name": "Terraform_course"
            },
            "tags_all": {
              "Name": "Terraform_course"
            },
            "vpc_id": "vpc-08795b010f070717f"
          },
          "dependencies": [
            "aws_vpc.terraform_course"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform_course",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904821688138:vpc/vpc-08795b010f070717f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ade71a44e64ad53c",
            "default_route_table_id": "rtb-03d8be4d66402dce8",
            "default_security_group_id": "sg-04d2c04ef585cdef1",
            "dhcp_options_id": "dopt-4b322029",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-08795b010f070717f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03d8be4d66402dce8",
            "owner_id": "904821688138",
            "tags": {
              "Name": "terraform_course"
            },
            "tags_all": {
              "Name": "terraform_course"
            }
          }
        }
      ]
    }
  ]
}